--- a/securitylab.topmonks.com/src/stylesheets/main.scss
+++ b/securitylab.topmonks.com/src/stylesheets/main.scss
@@ -21,9 +21,16 @@ html {
 // Main //
 // Intro //
 .intro {
+  align-self: center;
+
   .intro__img {
-    width: 100%;
-    height: auto;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    @media (max-width: 839px) {
+      display: none;
+    }
   }
 
   .btn__action {
@@ -37,6 +44,9 @@ html {
     }
   }
 
+  @media screen and (min-width: 839px) {
+    padding-top: 4em;
+  }
   @media (max-width: 539px) {
     .btn__action {
       text-align: center;
@@ -45,28 +55,24 @@ html {
 }
 
 .main__title {
-  padding: 24px 32px;
   border-radius: 10px;
   background-color: var(--mdc-theme--primary);
 
   h2 {
     margin: 0;
   }
+
+  @media (min-width: 540px) {
+    padding: 24px 32px;
+  }
 }
 
 // Section sliding menu
 .sliding-menu {
   margin: 0 auto;
-  display: flex;
-  background-color: var(--primary-color);
-  box-shadow: 0 0 1px 0 rgba(#185ee0, 0.15), 0 6px 12px 0 rgba(#185ee0, 0.15);
-  padding: 0.75rem;
-  border-radius: 99px; // just a high number to create pill effect
-
   a {
     text-decoration: none;
   }
-
   .tab--active {
     display: flex;
     height: 54px;
@@ -76,13 +82,24 @@ html {
       color: var(--mdc-theme--primary);
     }
   }
-
-  .tab--inactive:hover, .tab--inactive:active {
-    box-shadow: 0 0 0 2px var(--mdc-theme--third);
-    transition: all 0.7s ease-in-out;
+  .tab--inactive {
+    &:hover, &:active {
+      box-shadow: 0 0 0 2px var(--mdc-theme--third);
+      transition: all 0.7s ease-in-out;
+    }
+    a:active {
+      color: var(--mdc-theme--third);
+    }
+    @media (max-width: 739px) {
+      display: none;
+    }
   }
-  .tab--inactive a:active {
-    color: var(--mdc-theme--third);
+  @media screen and (min-width: 740px) {
+    display: flex;
+    background-color: var(--primary-color);
+    box-shadow: 0 0 1px 0 rgba(#185ee0, 0.15), 0 6px 12px 0 rgba(#185ee0, 0.15);
+    padding: 0.75rem;
+    border-radius: 99px; // just a high number to create pill effect
   }
 }
 
@@ -106,63 +123,31 @@ html {
   }
 }
 
-
-/*
-.section-menu {
-  margin: 2em auto 1em!important;
-  padding: 6px;
-  border-radius: 30px;
-  box-shadow: 0 12px 10px 0 #2B06540F;
-
-  ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: inline-flex;
-  }
-
-  li {
-    padding: 12px 28px;
-  }
-
-  li.menu--inactive {
-    background: var(--mdc-theme--on-primary);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-  li.menu--active {
-    background-image: var(--mdc-theme--on-primary);
-    border-radius: 30px;
-    a {
-      font-weight: 700;
-      color: var(--mdc-theme--primary);
-      text-decoration: none;
-    }
-  }
-
-  @media (max-width: 539px) {
-    box-shadow: none;
-    text-align: center;
-    li {
-      font-size: 12px;
-    }
-    li.menu--inactive {
-      display: none;
-    }
+.security-fields {
+  margin: 1em 0 3em;
+}
+.security-fields__bg {
+  align-self: center;
+  img {
+    width: 100%;
+    height: auto;
   }
 }
-*/
 
 .security-fields__cell {
   background-image: var(--mdc-theme--on-primary);
   border-radius: 10px;
   padding: 8px 20px;
-  margin-bottom: 14px;
 
   p {
     color: var(--mdc-theme--primary);
     margin: 8px auto;
+  }
+}
+
+#section__software, #section__social {
+  .security-fields__cell {
+    margin-bottom: 20px;
   }
 }
 
@@ -212,10 +197,9 @@ html {
   }
 
   li {
-    transition: all 0.3s ease;
     margin-right: 40px;
     color: var(--mdc-theme--primary-dark-grey);
-
+    transition: all 0.35s ease-in-out;
     @media screen and (min-width: 540px) {
       & > ::before {
         content: url("tab-inactive.svg");
