Security lab - corrected 'macros' path

--- a/securitylab.topmonks.com/src/html/components/footer.njk
+++ b/securitylab.topmonks.com/src/html/components/footer.njk
@@ -1,4 +1,4 @@
-{% from 'common/helpers.njk' import css, spriteTarget %}
+{% from 'macros/helpers.njk' import css, spriteTarget %}
 <footer id="contact" class="contact">
   <h2>Kontakt</h2>
   <div class="btn btn__email">
