--- a/securitylab.topmonks.com/src/html/components/header.njk
+++ b/securitylab.topmonks.com/src/html/components/header.njk
@@ -3,13 +3,11 @@
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div
-        class="header__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <a href="/"
-           title="Go to homepage">{{ sprite('logo-desktop', alt="Logo", viewBox="0 0 236 60") }}
+      <div class="header__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <a class="tm-logo tm-logo--desktop" href="/" title="Go to homepage">{{ sprite('logo-desktop', alt="Logo", viewBox="0 0 236 60") }}
         </a>
         <a class="tm-logo tm-logo--phone" href="/" title="Go to homepage">
-          <img alt="[Logo] TopMonks Security Lab" src="/assets/icon/logo-phone.svg"/>
+          {{ sprite('logo-phone', alt="Logo", viewBox="0 0 800 800") }}
         </a>
       </div>
 
@@ -17,7 +15,7 @@
         <a class="action-button" href="#">Chci od vás pomoc</a>
       </div>
       <div
-        class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-2-desktop">
+        class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-2-desktop">
         <div class="tm-hamburger__container">
           <div class="tm-hamburger__bar"></div>
           <div class="tm-hamburger__bar"></div>
