--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -89,7 +89,7 @@
           <label class="sliding-menu__tab tab--inactive"><a href="#section__software">Software</a></label>
           <label class="sliding-menu__tab tab--inactive"><a href="#section__social">Social Engineering</a></label>
         </div>
-        <picture class="security-fields__bg security-fields__bg--hardware mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <picture class="security-fields__bg security-fields__bg--hardware mdc-layout-grid__cell mdc-layout-grid__cell--span-6" data-aos="fade-right">
           <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/hardware.svg" | cloudinaryUrl(width=400) }} 1x,
                       {{ "/securitylab.topmonks.com/hardware.svg" | cloudinaryUrl(width=400) }} 1.5x,
@@ -222,7 +222,7 @@
 
           </script>
         </div>
-        <picture class="security-fields__bg security-fields__bg--software mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <picture class="security-fields__bg security-fields__bg--software mdc-layout-grid__cell mdc-layout-grid__cell--span-6" data-aos="fade-left">
           <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/software.svg" | cloudinaryUrl(width=400) }} 1x,
                       {{ "/securitylab.topmonks.com/software.svg" | cloudinaryUrl(width=400) }} 1.5x,
@@ -245,8 +245,8 @@
           <label class="sliding-menu__tab tab--inactive"><a href="#section__software">Software</a></label>
           <label class="sliding-menu__tab tab--active"><a href="#section__social">Social Engineering</a></label>
         </div>
-        <picture class="security-fields__bg security-fields__bg--social mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <source media="screen and (max-width: 399px)"
+        <picture class="security-fields__bg security-fields__bg--social mdc-layout-grid__cell mdc-layout-grid__cell--span-6" data-aos="fade-right">
+          <source media="screen and (max-width: 399px)"section__hardware
                   srcset="{{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 1x,
                       {{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 1.5x,
                       {{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 2x">
