Security lab - úprava kódu

--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -246,7 +246,7 @@
           <label class="sliding-menu__tab tab--active"><a href="#section__social">Social Engineering</a></label>
         </div>
         <picture class="security-fields__bg security-fields__bg--social mdc-layout-grid__cell mdc-layout-grid__cell--span-6" data-aos="fade-right">
-          <source media="screen and (max-width: 399px)"section__hardware
+          <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 1x,
                       {{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 1.5x,
                       {{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 2x">
