--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -30,7 +30,7 @@
         background-image: url({{ "/securitylab.topmonks.com/header_bg02.png"| cloudinaryUrl(width=900) }}), url({{ "/securitylab.topmonks.com/main_bg01.png"| cloudinaryUrl(width=900) }}),
         url({{ "/securitylab.topmonks.com/main_bg02.png"| cloudinaryUrl(width=900) }}), url({{ "/securitylab.topmonks.com/main_bg03.png"| cloudinaryUrl(width=900) }});
         background-size: 800px auto,340px auto, 340px auto, 340px auto;
-        background-position: top right, left 36%, right 64%, left 96%, bottom;
+        background-position: top right, left 48em, right 70em, left bottom, bottom;
         background-repeat: no-repeat;
       }
       .intro {
@@ -51,7 +51,16 @@
         <div class="intro__text mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
           <h1>Kybernetické útoky jsou stále sofistikovanější</h1>
           <p class="sub-title">
-            Tradiční bezpečnostní řešení už na ně nestačí</p>
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="#3D065F" xmlns="http://www.w3.org/2000/svg">
+              <path d="M26.9167 1.41666H7.08333C5.525 1.41666 4.26417 2.69166 4.26417 4.25L4.25 22.5675C4.25 23.545 4.74583 24.4092 5.49667 24.9192L17 32.5833L28.4892 24.9192C29.24 24.4092 29.7358 23.545 29.7358 22.5675L29.75 4.25C29.75 2.69166 28.475 1.41666 26.9167 1.41666ZM14.1667 22.6667L7.08333 15.5833L9.08083 13.5858L14.1667 18.6575L24.9192 7.905L26.9167 9.91666L14.1667 22.6667Z" fill="url(#paint0_linear_56_1663)"/>
+              <defs>
+                <linearGradient id="paint0_linear_56_1663" x1="3.56571" y1="3.93532" x2="35.472" y2="15.8563" gradientUnits="userSpaceOnUse">
+                  <stop offset="0.0202" stop-color="#45108A"/>
+                  <stop offset="0.2929" stop-color="#3D065F"/>
+                  <stop offset="1" stop-color="#10054D"/>
+                </linearGradient>
+              </defs>
+            </svg> Tradiční bezpečnostní řešení už na ně nestačí</p>
           <div class="btn btn__action">
             <a class="action-button" href="#">Chci od vás pomoc</a>
           </div>
@@ -75,8 +84,6 @@
       </div>
     </div>
   </section>
-
-
 
   <section class="main">
     <div class="mdc-layout-grid tm-layout-wrapper">
