--- a/securitylab.topmonks.com/src/stylesheets/typography.scss
+++ b/securitylab.topmonks.com/src/stylesheets/typography.scss
@@ -117,7 +117,7 @@ h1, h2, h3, p.sub-title {
     margin-top: 0;
 
     &:before {
-      content: url("/assets/css/security-icon.svg");
+      background-image: url("#security-icon");
       display: inline-block;
       width: 34px;
       height: 34px;
