Security lab - cleaning code

--- a/securitylab.topmonks.com/src/html/components/header.njk
+++ b/securitylab.topmonks.com/src/html/components/header.njk
@@ -27,9 +27,9 @@
   <nav id="navigation" class="tm-menu">
     <ul class="tm-menu__list">
       <li><a href="/" title="Go to homepage">Home</a></li>
-      <li><a href="#section__hardware">Hardware</a></li>
-      <li><a href="#section__software">Software</a></li>
-      <li><a href="#section__social">Social Engineering</a></li>
+      <li><a href="#security-field__hardware">Hardware</a></li>
+      <li><a href="#security-field__software">Software</a></li>
+      <li><a href="#security-field__social">Social Engineering</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
