--- a/securitylab.topmonks.com/src/stylesheets/main.scss
+++ b/securitylab.topmonks.com/src/stylesheets/main.scss
@@ -6,6 +6,7 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+  --mdc-layout-grid-margin-tablet: 32px;
 }
 
 html {
@@ -138,11 +139,12 @@ html {
 }
 
 .security-field__bg {
-  padding-top: 2em;
-
   img {
     width: 100%;
     height: auto;
+  }
+  @media screen and (min-width: 840px) {
+    padding-top: 2em;
   }
 }
 
@@ -164,7 +166,7 @@ html {
 }
 
 
-@media screen and (max-width: 539px) {
+@media screen and (max-width: 839px) {
   .order-1 {
     -webkit-order: 1; /* Safari 6.1+ */
     order: 1;
